--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                                 </a>
                             </span>
                             <span class="fa-stack">
-                                <a href="https://youtube.com">
+                                <a href="https://youtube.com" target=_blank>
                                     <i class="fas fa-circle fa-stack-2x"></i>
                                     <i class="fab fa-youtube fa-stack-1x"></i>
                                 </a>
