--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
                                     <div class="col-md-12">
                                         <div class="card mb-2">
-                                            <img class="card-img-top " src="/servicos/pintura-externa.jpg"
+                                            <img class="card-img-top " src="/clientes/cliente5.jpg"
                                                 alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Tulio Lemos Veloso Machado</h4>
@@ -378,7 +378,7 @@
 
                                     <div class="col-md-12" style="float:left">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="/servicos/pintura-interna.jpg"
+                                            <img class="card-img-top" src="/clientes/cliente3.jpg"
                                                 alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Rodrigo Pacheco</h4>
@@ -398,7 +398,7 @@
 
                                     <div class="col-md-12" style="float:left">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="/servicos/instalacao-gesso.jpg"
+                                            <img class="card-img-top" src="/clientes/cliente1.jpg"
                                                 alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Norberto Antunes</h4>
@@ -418,7 +418,7 @@
 
                                     <div class="col-md-12" style="float:left">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="/servicos/acabamento-interno.jpg"
+                                            <img class="card-img-top" src="/clientes/cliente4.jpg"
                                                 alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Raquel Andrade</h4>
@@ -440,7 +440,7 @@
 
                                     <div class="col-md-12">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="/servicos/pintura-grades-portoes.jpg"
+                                            <img class="card-img-top" src="/clientes/cliente2.jpg"
                                                 alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Kas & Natalie Melowsky</h4>
@@ -690,7 +690,7 @@
                                 </a>
                             </span>
                             <span class="fa-stack">
-                                <a href="https://youtube.com" target=_blank>
+                                <a href="https://youtube.com">
                                     <i class="fas fa-circle fa-stack-2x"></i>
                                     <i class="fab fa-youtube fa-stack-1x"></i>
                                 </a>
