--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
                                     <div class="col-md-12">
                                         <div class="card mb-2">
-                                            <img class="card-img-top " src="/clientes/cliente5.jpg"
+                                            <img class="card-img-top " src="clientes/cliente5.jpg"
                                                 alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Tulio Lemos Veloso Machado</h4>
@@ -378,7 +378,7 @@
 
                                     <div class="col-md-12" style="float:left">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="/clientes/cliente3.jpg"
+                                            <img class="card-img-top" src="clientes/cliente3.jpg"
                                                 alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Rodrigo Pacheco</h4>
@@ -398,7 +398,7 @@
 
                                     <div class="col-md-12" style="float:left">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="/clientes/cliente1.jpg"
+                                            <img class="card-img-top" src="clientes/cliente1.jpg"
                                                 alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Norberto Antunes</h4>
@@ -418,7 +418,7 @@
 
                                     <div class="col-md-12" style="float:left">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="/clientes/cliente4.jpg"
+                                            <img class="card-img-top" src="clientes/cliente4.jpg"
                                                 alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Raquel Andrade</h4>
@@ -440,7 +440,7 @@
 
                                     <div class="col-md-12">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="/clientes/cliente2.jpg"
+                                            <img class="card-img-top" src="clientes/cliente2.jpg"
                                                 alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Kas & Natalie Melowsky</h4>
@@ -485,24 +485,7 @@
                                     <div class="counter-value number-count" data-count="231">1</div>
                                     <p class="counter-info">Clientes Satisfeitos</p>
                                 </div>
-                                <!--
-                        <div class="cell">
-                            <div class="counter-value number-count" data-count="385">1</div>
-                            <p class="counter-info">Issues Solved</p>
-                        </div>
-                        <div class="cell">
-                            <div class="counter-value number-count" data-count="159">1</div>
-                            <p class="counter-info">Good Reviews</p>
-                        </div>
-                        <div class="cell">
-                            <div class="counter-value number-count" data-count="127">1</div>
-                            <p class="counter-info">Case Studies</p>
-                        </div>
-                        <div class="cell">
-                            <div class="counter-value number-count" data-count="211">1</div>
-                            <p class="counter-info">Orders Received</p>
-                        </div>
-                    </div>-->
+                                
                                 <!-- end of counter -->
 
                             </div> <!-- end of col -->
