--- a/index.html
+++ b/index.html
@@ -529,25 +529,25 @@
                                 <div class="form-row">
                                     <div class="form-group col-md-3">
                                         <div class="form-group">
-                                            <label for="inputAddress">Rua</label>
+                                            <label for="rua">Rua</label>
                                             <input type="text" class="form-control" id="rua" placeholder="Rua">
                                         </div>
                                     </div>
                                     <div class="form-group col-md-2">
                                         <div class="form-group">
-                                            <label for="inputAddress2">Nº</label>
+                                            <label for="numero">Nº</label>
                                             <input type="number" class="form-control" id="numero" placeholder="Numero">
                                         </div>
                                     </div>
                                     <div class="form-group col-md-3">
                                         <div class="form-group">
-                                            <label for="inputAddress2">Bairro</label>
+                                            <label for="bairro">Bairro</label>
                                             <input type="text" class="form-control" id="Bairro" placeholder="Bairro">
                                         </div>
                                     </div>
                                     <div class="form-group col-md-4">
                                         <div class="form-group">
-                                            <label for="inputAddress">Cidade</label>
+                                            <label for="cidade">Cidade</label>
                                             <input type="text" class="form-control" id="cidade" placeholder="Cidade">
                                         </div>
                                     </div>
