--- a/index.html
+++ b/index.html
@@ -354,8 +354,7 @@
 
                                     <div class="col-md-12">
                                         <div class="card mb-2">
-                                            <img class="card-img-top " src="clientes/cliente5.jpg"
-                                                alt="Card image cap">
+                                            <img class="card-img-top " src="clientes/cliente5.jpg" alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Tulio Lemos Veloso Machado</h4>
                                                 <p class="card-text">"Fiquei satisfeito com os serviços de pintura da
@@ -378,8 +377,7 @@
 
                                     <div class="col-md-12" style="float:left">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="clientes/cliente3.jpg"
-                                                alt="Card image cap">
+                                            <img class="card-img-top" src="clientes/cliente3.jpg" alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Rodrigo Pacheco</h4>
                                                 <p class="card-text">"A House Paint estava certa sobre o orçamento.
@@ -398,8 +396,7 @@
 
                                     <div class="col-md-12" style="float:left">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="clientes/cliente1.jpg"
-                                                alt="Card image cap">
+                                            <img class="card-img-top" src="clientes/cliente1.jpg" alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Norberto Antunes</h4>
                                                 <p class="card-text">"Muito obrigado! Estou 100% satisfeito com o
@@ -418,8 +415,7 @@
 
                                     <div class="col-md-12" style="float:left">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="clientes/cliente4.jpg"
-                                                alt="Card image cap">
+                                            <img class="card-img-top" src="clientes/cliente4.jpg" alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Raquel Andrade</h4>
                                                 <p class="card-text">"Quando eu chamei a empresa House Paint para fazer
@@ -440,8 +436,7 @@
 
                                     <div class="col-md-12">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="clientes/cliente2.jpg"
-                                                alt="Card image cap">
+                                            <img class="card-img-top" src="clientes/cliente2.jpg" alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Kas & Natalie Melowsky</h4>
                                                 <p class="card-text">"Quando falei com o funcionário da House Paint
@@ -736,6 +731,9 @@
                                 <a class="btn-solid-lg"
                                     href="https://www.google.com.br/maps/place/Av.+Nereu+Ramos,+3777D+-+Semin%C3%A1rio,+Chapec%C3%B3+-+SC,+89813-000/@-27.1345147,-52.6015282,17z/data=!3m1!4b1!4m5!3m4!1s0x94e4b14117760671:0x1a60f67df52e7515!8m2!3d-27.1342905!4d-52.5995843"
                                     target=_blank>Veja no Mapa</a>
+                                <a class="btn-solid-lg"
+                                    href="https://drive.google.com/file/d/14mYdQKD1JDpH8TDN1pNvA5lqKh9KdiLT/view?usp=sharing"
+                                    target=_blank>Download do Site</a>
                             </div>
                         </div>
                     </div>
