--- a/index.html
+++ b/index.html
@@ -354,8 +354,7 @@
 
                                     <div class="col-md-12">
                                         <div class="card mb-2">
-                                            <img class="card-img-top " src="clientes/cliente5.jpg"
-                                                alt="Card image cap">
+                                            <img class="card-img-top " src="clientes/cliente5.jpg" alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Tulio Lemos Veloso Machado</h4>
                                                 <p class="card-text">"Fiquei satisfeito com os serviços de pintura da
@@ -378,8 +377,7 @@
 
                                     <div class="col-md-12" style="float:left">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="clientes/cliente3.jpg"
-                                                alt="Card image cap">
+                                            <img class="card-img-top" src="clientes/cliente3.jpg" alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Rodrigo Pacheco</h4>
                                                 <p class="card-text">"A House Paint estava certa sobre o orçamento.
@@ -398,8 +396,7 @@
 
                                     <div class="col-md-12" style="float:left">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="clientes/cliente1.jpg"
-                                                alt="Card image cap">
+                                            <img class="card-img-top" src="clientes/cliente1.jpg" alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Norberto Antunes</h4>
                                                 <p class="card-text">"Muito obrigado! Estou 100% satisfeito com o
@@ -418,8 +415,7 @@
 
                                     <div class="col-md-12" style="float:left">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="clientes/cliente4.jpg"
-                                                alt="Card image cap">
+                                            <img class="card-img-top" src="clientes/cliente4.jpg" alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Raquel Andrade</h4>
                                                 <p class="card-text">"Quando eu chamei a empresa House Paint para fazer
@@ -440,8 +436,7 @@
 
                                     <div class="col-md-12">
                                         <div class="card mb-2">
-                                            <img class="card-img-top" src="clientes/cliente2.jpg"
-                                                alt="Card image cap">
+                                            <img class="card-img-top" src="clientes/cliente2.jpg" alt="Card image cap">
                                             <div class="card-body">
                                                 <h4 class="card-title">Kas & Natalie Melowsky</h4>
                                                 <p class="card-text">"Quando falei com o funcionário da House Paint
@@ -485,7 +480,24 @@
                                     <div class="counter-value number-count" data-count="231">1</div>
                                     <p class="counter-info">Clientes Satisfeitos</p>
                                 </div>
-                                
+                                <!--
+                        <div class="cell">
+                            <div class="counter-value number-count" data-count="385">1</div>
+                            <p class="counter-info">Issues Solved</p>
+                        </div>
+                        <div class="cell">
+                            <div class="counter-value number-count" data-count="159">1</div>
+                            <p class="counter-info">Good Reviews</p>
+                        </div>
+                        <div class="cell">
+                            <div class="counter-value number-count" data-count="127">1</div>
+                            <p class="counter-info">Case Studies</p>
+                        </div>
+                        <div class="cell">
+                            <div class="counter-value number-count" data-count="211">1</div>
+                            <p class="counter-info">Orders Received</p>
+                        </div>
+                    </div>-->
                                 <!-- end of counter -->
 
                             </div> <!-- end of col -->
@@ -529,25 +541,25 @@
                                 <div class="form-row">
                                     <div class="form-group col-md-3">
                                         <div class="form-group">
-                                            <label for="rua">Rua</label>
+                                            <label for="inputAddress">Rua</label>
                                             <input type="text" class="form-control" id="rua" placeholder="Rua">
                                         </div>
                                     </div>
                                     <div class="form-group col-md-2">
                                         <div class="form-group">
-                                            <label for="numero">Nº</label>
+                                            <label for="inputAddress2">Nº</label>
                                             <input type="number" class="form-control" id="numero" placeholder="Numero">
                                         </div>
                                     </div>
                                     <div class="form-group col-md-3">
                                         <div class="form-group">
-                                            <label for="bairro">Bairro</label>
+                                            <label for="inputAddress2">Bairro</label>
                                             <input type="text" class="form-control" id="Bairro" placeholder="Bairro">
                                         </div>
                                     </div>
                                     <div class="form-group col-md-4">
                                         <div class="form-group">
-                                            <label for="cidade">Cidade</label>
+                                            <label for="inputAddress">Cidade</label>
                                             <input type="text" class="form-control" id="cidade" placeholder="Cidade">
                                         </div>
                                     </div>
@@ -719,6 +731,9 @@
                                 <a class="btn-solid-lg"
                                     href="https://www.google.com.br/maps/place/Av.+Nereu+Ramos,+3777D+-+Semin%C3%A1rio,+Chapec%C3%B3+-+SC,+89813-000/@-27.1345147,-52.6015282,17z/data=!3m1!4b1!4m5!3m4!1s0x94e4b14117760671:0x1a60f67df52e7515!8m2!3d-27.1342905!4d-52.5995843"
                                     target=_blank>Veja no Mapa</a>
+                                <a class="btn-solid-lg"
+                                    href="https://drive.google.com/file/d/14mYdQKD1JDpH8TDN1pNvA5lqKh9KdiLT/view?usp=sharing"
+                                    target=_blank>Download do Site</a>
                             </div>
                         </div>
                     </div>
